--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,70 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>  
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ --> 
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-  <title>NhQis</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <meta charset="utf-8">
+
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
+       Remove this if you use the .htaccess -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>Erudatum</title>
+  <meta name="description" content="">
+  <meta name="author" content="Ian Schreuder">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="shortcut icon" href="/favicon.ico">
+
+  <!-- CSS : implied media="all" -->
+  <link rel="stylesheet" href="/stylesheets/style.css?v=1">
+  <link rel="stylesheet" href="/stylesheets/master.css?v=1">
+ 
+  <script src="/javascripts/modernizr-1.6.min.js"></script>
+  <%= yield :javascript_head %>
+  
   <%= csrf_meta_tag %>
+
 </head>
+
 <body>
 
-<%= yield %>
+  <div id="container">
+    
+    <div>
+      <%= yield %>
+    </div>
+    
 
+
+
+  </div>
+	<footer>
+		<p>&copy; 2010 Erudatum Inc.</p>
+	</footer>
+
+  <script src="/javascripts/jquery-1.4.2.js"></script>
+  <script src="/javascripts/plugins.js?v=1"></script>
+  <script src="/javascripts/script.js?v=1"></script>
+  
+  <!--[if lt IE 7 ]>
+    <script src="/javascripts/dd_belatedpng.js"></script>
+    <script> DD_belatedPNG.fix('img, .png_bg'); //fix any <img> or .png_bg background-images </script>
+  <![endif]-->
+
+  <script>
+   var _gaq = [['_setAccount', 'UA-20031591-1'], ['_trackPageview']];
+   (function(d, t) {
+    var g = d.createElement(t),
+        s = d.getElementsByTagName(t)[0];
+    g.async = true;
+    g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g, s);
+   })(document, 'script');
+  </script>
+  
 </body>
 </html>
