--- a/app/views/nhs/_map.html.erb
+++ b/app/views/nhs/_map.html.erb
@@ -3,6 +3,6 @@
 <% end %>
 
 <!--PANEL-->
-<div id="map_content" style="width:700px; height: 700px; background: grey">&nbsp;</div>
+<div id="map_content" style="width:500px; height: 500px; background: #52514e">&nbsp;</div>
 <!--END PANEL-->
 
