--- a/app/views/dash/back.html.erb
+++ b/app/views/dash/back.html.erb
@@ -1,51 +1,49 @@
-<%= content_for :header do %>
-
 <div id="intro">
+	<div id="pageHeader">
+		<h1><span>css Zen Garden</span></h1>
+		<h2><span>The Beauty of <acronym title="Cascading Style Sheets">CSS</acronym> Design</span></h2>
+	</div>
 
 	<div id="quickSummary">
-		<p class="p1"><span>Should be visible</span></p>
+
+		<p class="p1"><span>A demonstration of what can be accomplished visually through <acronym title="Cascading Style Sheets">CSS</acronym>-based design. Select any style sheet from the list to load it into this page.</span></p>
+		<p class="p2"><span>Download the sample <a href="zengarden-sample.html" title="This page's source HTML code, not to be modified.">html file</a> and <a href="zengarden-sample.css" title="This page's sample CSS, the file you may modify.">css file</a></span></p>
 	</div>
 
 	<div id="preamble">
+
 		<h3><span>The Road to Enlightenment</span></h3>
-		<p class="p1">
-		  <span>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </span>
-		</p>
+		<p class="p1"><span>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </span></p>
 	</div>
-
 </div>
-	
-<div id="supportingText">
 
+<div id="supportingText">
 	<div id="requirements">
+
 		<h3><span>Requirements</span></h3>
-		<p class="p1"><span>Paragraph 1</span></p>
+		<p class="p1"><span>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </span></p>
 	</div>
 
 	<div id="footer">
-		<a href="http://validator.w3.org/check/referer" title="Check the validity of this site&#8217;s XHTML">xhtml</a> &nbsp; 
+		<a href="http://www.mezzoblue.com/zengarden/faq/#aaa" title="Read about the accessibility of this site">aaa</a>
 	</div>
-	
+
 </div>
 
 
 <div id="linkList">
-
 	<div id="lselect">
 		<h3 class="select"><span>Select a Design:</span></h3>
 		<ul>
-			<li><a href="#" title="AccessKey: a" accesskey="a">Link 1</a> by <a href="#" class="c">Sub Link</a></li>
+			<li><a href="/" title="AccessKey: a" accesskey="a">Sample #1</a> by <a href="http://www.mezzoblue.com/" class="c">Dave Shea</a>&nbsp;</li>
 		</ul>
 	</div>
 
 	<div id="lresources">
 		<h3 class="resources"><span>Resources:</span></h3>
 		<ul>
-			<li><a href="#" title="Send in your own CSS file. AccessKey: s" accesskey="s"><span class="accesskey">W</span>eird Linking Style</a></li>
+			<li><a href="http://www.csszengarden.com/001/001.css" title="View the source CSS file for the currently-viewed design, AccessKey: v" accesskey="v"><span class="accesskey">V</span>iew This Design&#8217;s <acronym title="Cascading Style Sheets">CSS</acronym></a></li>
 		</ul>
 	</div>
 
 </div>
-
-
-<% end %>
