--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,33 @@
 
   <div id="container">
     
-    <div>
-      <%= yield %>
+    <div id="header">
+    	<div id="pageHeader">
+    		<h1><span>css Zen Garden</span></h1>
+    		<h2><span>The Beauty of <acronym title="Cascading Style Sheets">CSS</acronym> Design</span></h2>
+    	</div>
+
+    	<div id="quickSummary">
+
+    		<p class="p1"><span>A demonstration of what can be accomplished visually through <acronym title="Cascading Style Sheets">CSS</acronym>-based design. Select any style sheet from the list to load it into this page.</span></p>
+    		<p class="p2"><span>Download the sample <a href="zengarden-sample.html" title="This page's source HTML code, not to be modified.">html file</a> and <a href="zengarden-sample.css" title="This page's sample CSS, the file you may modify.">css file</a></span></p>
+    	</div>
+
+    	<div id="top_image"></div>
+
     </div>
+
+    <div id="mainBody">
+      <%= yield :main %>
+
+      <div id="footer">
+      	<a href="http://www.mezzoblue.com/zengarden/faq/#aaa" title="Read about the accessibility of this site">aaa</a>
+      </div>
+
+    </div>
+
     
-
-
+    <%= yield :links %>
 
   </div>
 	<footer>
