--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -18,7 +18,7 @@ body {
 	margin-bottom: 50px;
 }
 
-#intro {
+#header {
 	background: transparent url("/images/bg_intro.jpg") right top no-repeat;
 	position: relative;
 	padding: 1px;
@@ -67,77 +67,76 @@ body {
 		text-decoration: none;
 	}
 
-#preamble {
+#top_image {
 	background: transparent url("/images/bg_preamble.jpg") right top no-repeat;
 	color: #fff;
 	font: normal 80%/18px Arial, Helvetica, sans-serif;
 	padding: 80px 30px 15px 15px;
 	margin-left: 210px;
-	margin-top: 192px;
+	margin-top: 92px;
 	height: 100%;
 }
 
-	#preamble h3 {
+	#top_image h3 {
 		background: transparent url("/images/hl_roadto.gif") left top no-repeat;
 		height: 37px;
 		margin: 0 0 10px 0;
 		width: 508px;
 	}
 		
-	#preamble acronym {
+	#top_image acronym {
 		border-bottom:1px dotted #F29E00;
 		color: #F29E00; 
 		font-weight: normal;
 		font-size: 85%;
 	}
 	
-	#preamble p {
+	#top_image p {
 		padding-left: 30px;
 	}
 
 
-#supportingText {
+#mainBody {
 	color: #fff;
 	margin-left: 210px;
 	font: normal 80%/18px Arial, Helvetica, sans-serif;
-	padding: 15px 35px 15px 15px;
+	padding: 15px 0px 15px 15px;
 	position: relative;
 	height: 100%;
 }
 
-	#supportingText acronym {
+	#mainBody acronym {
 		border-bottom:1px dotted #F29E00;
 		color: #F29E00; 
 		font-size: 85%;
 		font-weight: normal;
 	}
 
-	#supportingText a, #supportingText a:link, #supportingText a:visited {
+	#mainBody a, #mainBody a:link, #mainBody a:visited {
 		color: #F29E00; 
 		font-weight: bold;
 		text-decoration: underline;
 	}
 	
-	#supportingText a:hover, #supportingText a:active, #supportingText a:focus {
+	#mainBody a:hover, #mainBody a:active, #mainBody a:focus {
 		text-decoration: none
 	}
 	
-	#supportingText p {
+	#mainBody p {
 		padding-left: 30px;
 	}
 
-#requirements {
+#mainText {
 	margin-bottom: 50px;
 }
-		
-	#requirements h3 {
+	#mainText h3 {
 		background: transparent url("/images/hl_requirements.gif") left top no-repeat;
 		height: 37px;
-		margin: 23px 0 10px 1px;
+		margin: 0px 0 10px 1px;
 		width: 508px;
 	}
 
-#preamble h3 span, #explanation h3 span, #participation h3 span, #benefits h3 span, #requirements h3 span {
+#top_image h3 span, #mainText h3 span {
 	display: inline;
 	height: 0;
 	left: -1000px;
@@ -146,6 +145,19 @@ body {
 	top: -1000px;
 	width: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #linkList {
 	background: transparent url("/images/bg_linkList.gif") 0px 2px repeat-y;
@@ -153,71 +165,65 @@ body {
 	font-weight: normal;
 	padding: 15px 10px 0 0;
 	position: absolute;
-	top: 193px;
+	top: 100px;
 	width: 221px;
 }
-		
 	#linkList h3 {
 		padding-left: 10px;
 	}
-	
 	#linkList a, #linkList a:link, #linkList a:visited  {
 		color: #000;
 		text-decoration: underline;
 	}
-	
 	#linkList a:hover, #linkList a:active, #linkList a:focus  {
 		text-decoration: none;
 	}
-	
 	#linkList ul li {
 		font-size: 70%;
 		list-style: square;
 	}
-
-
-#lselect {
-	background: transparent url("/images/bg_lselect.gif") left bottom no-repeat;
+#lproject {
+	background: transparent url("/images/bg_lproject.gif") left bottom no-repeat;
 	padding-bottom: 25px;
 }
-		
-	.select {
-		background: transparent url("/images/h1_lselect.gif") left top no-repeat;
+	.project {
+		background: transparent url("/images/h1_lproject.gif") left top no-repeat;
 		display: block;
 		margin: 0 auto;
 		height: 29px;
 		width: 185px;
 	}
-	
-	#lselect ul li a {
+	#lproject ul li a {
 		display: block;
 		font: bold 110%/19px Arial, Helvetica, sans-serif;
 	}
-	
-	#lselect ul li a.c {
+	#lproject ul li a.c {
 		color: #fff;
 		display: inline;
 		font: normal 90%/19px Arial, Helvetica, sans-serif;
 	}
-
-#lresources {
-	background: transparent url("/images/bg_lresources.gif") left bottom no-repeat;
+#lsearchparams {
+	background: transparent url("/images/bg_lsearchparams.gif") left bottom no-repeat;
 	padding-bottom: 30px;
 }
-
-	.resources {
-		background: transparent url("/images/h1_lresources.gif") left top no-repeat;
+	.searchparams {
+		background: transparent url("/images/h1_lsearchparams.gif") left top no-repeat;
 		display: block;
 		margin: 15px auto;
 		height: 29px;
 		width: 185px;
 	}
-
-#lresources ul li, #larchives ul li, #lselect ul li {
-	margin: 14px 0 14px 35px;
+#lsearchparams ul li, #lproject ul li {
+	margin: 14px 0 14px 20px;
 }
-
-.resources span, .archives span, .select span {
+#lsearchparams form {
+	margin: 14px 0 14px 15px;
+}
+#lsearchparams input, select {
+	margin-bottom: 10px;
+	padding: 2px 5px 2px 5px;
+}
+.project span, .searchparams span {
 	display: inline;
 	height: 0;
 	left: -1000px;
@@ -226,7 +232,6 @@ body {
 	top: -1000px;
 	width: 0;
 }
-
 #footer {
 	background: transparent url("/images/bg_footer.gif") left top no-repeat;
 	bottom: -27px;
@@ -237,12 +242,10 @@ body {
 	width: 312px;
 	padding-left: 37px;
 }
-		
 	#footer a, #footer a:link, #footer a:visited {
 		color: #000;
 		padding: 0 6px;
 	}
-	
 	* html #footer {
 		bottom: -28px;
 	}
