more files and updated db

--- a/app/views/nhs/index.html.erb
+++ b/app/views/nhs/index.html.erb
@@ -1,6 +1,6 @@
 <%=content_for :main do %>
 <div id="mainText">
-	<h3><span>Requirements</span></h3>
+	<h3><span>Nursing Homes</span></h3>
   <%=render(:partial => "map")%>
 </div>
 
