--- a/app/views/nhs/_map.html.erb
+++ b/app/views/nhs/_map.html.erb
@@ -1,8 +1,35 @@
 <% content_for :javascript_head do %>
-<!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>-->
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <% end %>
 
 <!--PANEL-->
 <div id="map_content" style="width:500px; height: 500px; background: #52514e">&nbsp;</div>
 <!--END PANEL-->
+
+<script type="text/javascript">
+(function() {
+	window.onload = function(){
+		var latlng = new google.maps.LatLng(<%="#{@geo.lat},#{@geo.lng}".html_safe%>);
+		var options = {
+		  zoom: <%=@zoom%>,
+		  center: latlng,
+      scaleControl: true,
+      navigationControlOptions: {style: google.maps.NavigationControlStyle.SMALL },
+		  mapTypeId: google.maps.MapTypeId.ROADMAP
+		};
+		var map = new google.maps.Map(document.getElementById('map_content'), options);
+
+  <% @homes.each_with_index do |home, idx| -%>
+    <% location = home.location %>
+    var marker = new google.maps.Marker({  
+      position: new google.maps.LatLng(<%=location.latitude%>, <%=location.longitude%>),  
+      title: '<%=h(escape_javascript(home.name))%>',
+      map: map  
+    });
+  <% end -%>
+
+	}
+})();
+
+</script>
 
