--- a/app/views/nhs/_results.html.erb
+++ b/app/views/nhs/_results.html.erb
@@ -1,9 +1,11 @@
 <div id="lresults">
 	<h3 class="results"><span>Results:</span></h3>
   <% @homes.each do |home| %>
+  <a href="#">
 	<ul>
 	  <li>Name: <%=home.name%></li>
 	  <li>Zip: <%=home.zip%></li>
 	</ul>
+	</a>
   <% end %>
 </div>
